# python_test

./: README.md  main.py
DynamicShoppingCartProject/: oop_Main.py  shoppingCart.py
PoetryEmployee/employee_management_system/employee_management_system/: cli.py  employee_manager.py  employees.json  models.py
PoetryEmployee/employee_management_system/employee_management_system/tests/: test_employee_manager.py  test_manager.py  test_model.py
PoetryProject_01/: README.md  pyproject.toml
PoetryProject_01/poetry_venv/: pyvenv.cfg
PoetryProject_01/poetry_venv/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack  start  start.cmd
PoetryProject_01/qr-generator/: main.py  package-lock.json  package.json
PoetryShortApi/url-shortener/url_shortener/: config.py  database.py  main.py  models.py  schemas.py  shortener.db
