[tool.poetry]
name = "qr-generator"
version = "0.1.0"
description = ""
authors = ["adekola <gabkola94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
qrcode = ">=8.0,<9.0"
pillow = ">=11.1.0,<12.0.0"
uuid = ">=1.30,<2.0"
faker = ">=36.1.0,<37.0.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "qr_generator.main:main"
